Assignment 27 completed, HTML

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,1 +1,10 @@
-
+.social-btn {
+  display: inline;
+  height: auto;
+  width: auto;
+  background: #00BFFF;
+  border-style: ridge;
+  color: #FFFFFF;
+  text-align: center;
+  font-family: verdana;
+}
