--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,4 @@
 <h1>About Bloccit</h1>
 <p>Created by: Alberto</p>
+
+<%= link_to "Follow me", "https://www.twitter.com/alberticograu", class: "social-btn" %>
