--- a/app/views/advertisements/index.html.erb
+++ b/app/views/advertisements/index.html.erb
@@ -1,9 +1,9 @@
 <h1>All Advertisements</h1>
-<% @advertisements.each do |advertisement, copy, price| %>
+<% @advertisements.each do |advertisement| %>
 <div class="media">
 <div class="media-body">
   <h4 class="media-heading">
-    <%= link_to advertisement.title, copy, price %>
+    <%= link_to advertisement.title, advertisement %>
   </h4>
 </div>
 </div>
