--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -19,6 +19,14 @@
              <%= post.comments.count %> Comments
            </small>
 
+           <% @sponsoredpost.topic.each do |post| %>
+             <div class="media">
+               <div class="media-body">
+                 <h4 class="media-heading">
+
+                   <%= link_to sponsoredpost.title, topic_sponsoredpost_path(@sponsoredpost, topic) %>
+                 </h4>
+              
          </div>
        </div>
      <% end %>
@@ -26,5 +34,6 @@
    <div class="col-md-4">
      <%= link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-success' %>
      <%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this topic?' } %>
+     <%= link_to "New Sponsored Post", new_topic_sponsoredpost_path(@sponsoredpost), class: 'btn btn-success' %>
    </div>
  </div>
