--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -6,7 +6,6 @@
  <div class="row">
    <div class="col-md-8">
      <p class="lead"><%= @topic.description %></p>
-
      <% @topic.posts.each do |post| %>
        <div class="media">
          <div class="media-body">
@@ -14,26 +13,34 @@
 
              <%= link_to post.title, topic_post_path(@topic, post) %>
            </h4>
+
            <small>
              submitted <%= time_ago_in_words(post.created_at) %> ago <br>
              <%= post.comments.count %> Comments
            </small>
 
-           <% @sponsoredpost.topic.each do |post| %>
+         </div>
+       </div>
+       <% end %>
+     </div>
+
+           <% @topic.sponsored_posts.each do |sponsored_post| %>
              <div class="media">
                <div class="media-body">
                  <h4 class="media-heading">
 
-                   <%= link_to sponsoredpost.title, topic_sponsoredpost_path(@sponsoredpost, topic) %>
+                   <%= link_to sponsored_posts.title, topic_sponsored_post_path(@topic, sponsored_post) %>
                  </h4>
-              
+
+              </div>
          </div>
-       </div>
-     <% end %>
-   </div>
+      <% end %>
+    </div>
+
    <div class="col-md-4">
      <%= link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-success' %>
      <%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this topic?' } %>
-     <%= link_to "New Sponsored Post", new_topic_sponsoredpost_path(@sponsoredpost), class: 'btn btn-success' %>
-   </div>
+     <%= link_to "New Sponsored Post", new_topic_sponsored_post_path(@topic), class: 'btn btn-success' %>
+
+ </div>
  </div>
