--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,27 @@
-<h1>Welcome to Bloccit</h1>
-<p>This is the home page for Bloccit.</p>
+<br>
+<div class="jumbotron">
+  <h1>Bloccit</h1>
+  <p>Bloccit is a resource for sharing links with your friends!</p>
+  <p>
+    <%= link_to "Sign Up", new_user_path, class: 'btn btn-primary' %> today!
+  </p>
+</div>
+
+<div class="col-md-4">
+  <h2>Eliminates world hunger</h2>
+  <p>
+    Well not really, but we wish it could! You could help by donating food to your nearest shelter.
+  </p>
+</div>
+<div class="col-md-4">
+  <h2>Eliminates poverty</h2>
+  <p>
+    Bloccit delivers funding and education to those in need, all over the world.
+  </p>
+</div>
+<div class="col-md-4">
+  <h2>Makes you better looking</h2>
+  <p>
+    Ok...so maybe it won't make you better looking, but who cares? We already think you're beautiful!
+  </p>
+</div>
