--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -18,7 +18,7 @@
 
       <%= form_group_tag(@user.errors[:name]) do %>
         <%= f.label :name %>
-        <%= f.text_field :name, autofocus: true, class: 'form-control', palceholder: "Hey there! What's your name?" %>
+        <%= f.text_field :name, autofocus: true, class: 'form-control', placeholder: "Hey there! What's your name?" %>
         <% end %>
 
       <%= form_group_tag(@user.errors[:email]) do %>
