--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,4 +16,11 @@
       <%= link_to "Edit", edit_topic_post_path(@post.topic, @post), class: 'btn btn-success' %>
       <%= link_to "Delete Post", [@post.topic, @post], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this post?' } %>
     <% end %>
+
+    <% if moderator_is_authorized_for_edit? %>
+      <div class="col-md-4">
+       <%= link_to "Edit Post", edit_topic_post_path(@post.topic, @post), class: 'btn btn-success' %>
+       <%= link_to "New Post", new_topic_post_path, class: 'btn btn-success' %>
+     </div>
+    <% end %>
    </div>
