--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -8,15 +8,15 @@
       <br>
       <%= @topic.description %>
      </p>
-    <% @topic.post.each do |post| %>
+    <% @topic.posts.each do |posts| %>
       <div class="media">
         <div class="media-body">
           <h4 class="media-heading">
-            <%= render partial: "labels/list", locals: { labels: post.labels } %>
-            <%= link_to post.title, topic_post_path(@topic, post) %>
+            <%= render partial: "labels/list", locals: { labels: posts.labels } %>
+            <%= link_to posts.title, topic_post_path(@topic, posts) %>
           </h4>
           <small>
-            submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.name %> </br> <%= post.comments.count %> Comments
+            submitted <%= time_ago_in_words(posts.created_at) %> ago by <%= posts.user.name %> </br> <%= posts.comments.count %> Comments
           </small>
         </div>
       </div>
