--- a/app/views/votes/_voter.html.erb
+++ b/app/views/votes/_voter.html.erb
@@ -3,7 +3,7 @@
     <%= link_to " ", '#', class: 'glyphicon glyphicon-chevron-up' %>
   </div>
   <div>
-    <strong><%= posts.points %></strong>
+    <strong><%= post.points %></strong>
   </div>
   <div>
     <%= link_to " ", '#', class: 'glyphicon glyphicon-chevron-down' %>
