--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,13 +1,12 @@
 <div class="media">
+  <%= render partial: 'votes/voter', locals: { post: post } %>
   <div class="media-body">
     <h4 class="media-heading">
-
+      <%= render partial: "labels/list", locals: { labels: post.labels } %>
       <%= link_to post.title, topic_post_path(post.topic, post) %>
     </h4>
     <small>
-      submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.name %> <br>
-      <%= post.comments.count %> Comments
+      submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.name %> </br> <%= post.comments.count %> Comments
     </small>
-
   </div>
 </div>
