Checkpoint 43 on Voting has been completed

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -39,8 +39,8 @@
         <%= pluralize(@post.points, 'point') %>
         <div>
           <small>
-            <%= pluralize(@post.up_votes, 'up_votes') %>,
-            <%= pluralize(@post.down_votes, 'down vote') %>
+            <%= pluralize(@post.up_votes, 'Up votes') %>,
+            <%= pluralize(@post.down_votes, 'Down votes') %>
           </small>
         </div>
       </h3>
