--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -5,8 +5,6 @@
       <%= render partial: "labels/list", locals: { labels: post.labels } %>
       <%= link_to post.title, topic_post_path(post.topic, post) %>
     </h4>
-    <small>
-      submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.name %> </br> <%= post.comments.count %> Comments
-    </small>
+    <%= render_post_byline_for(post) %>
   </div>
 </div>
