--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -8,7 +8,7 @@
       <br>
       <%= @topic.description %>
      </p>
-    <%= render @topic.posts %>
+    <%= render_posts(@topic.posts) %>
     </div>
     <% if current_user %>
       <div class="col-md-4">
