--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,9 +2,12 @@
   <%= render partial: 'votes/voter', locals: { post: post } %>
   <div class="media-body">
     <h4 class="media-heading">
-      <%= render partial: "labels/list", locals: { labels: post.labels } %>
       <%= link_to post.title, topic_post_path(post.topic, post) %>
+      <%= render partial: "labels/list", locals: { labels: post.labels } %>
     </h4>
-    <%= render_post_byline_for(post) %>
+    <small>
+      submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.name %> <br>
+      <%= post.comments.count %> Comments
+    </small>
   </div>
 </div>
