Assignment 45 Public Profiles

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -9,5 +9,7 @@
       submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.name %> <br>
       <%= post.comments.count %> Comments
     </small>
+<%= image_tag post.user.avatar_url(48)%>
+
+    </div>
   </div>
-</div>
