--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,9 +19,12 @@
    </div>
  </div>
 
-<!-- 14 -->
+
  <h2>Posts</h2>
  <%= render @user.posts %>
 
  <h2>Comments</h2>
  <%= render @user.comments %>
+
+ <h2>Favorites</h2>
+ <%= render @favorite_posts = @user.favorites.map { |fav| fav.post }%>
